[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["니꼬 <nico@nomadcoders.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~4.0"
djangorestframework = "^3.13.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.130.4"}
strawberry-graphql-django = "^0.5.1"
PyJWT = "^2.4.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
sentry-sdk = "^1.9.9"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
